--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 <body>
     <header></header>
 
+    <div class="main-visual"></div>
+
+    <div class="main-container clearflex">
+        <div class="sidebar-left"></div>
+        <div class="main"></div>
+        <div class="sidebar-right"></div>
+    </div>
 
     <footer></footer>
 
